--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
+  <!-- <meta charset="utf-8"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -14,6 +14,45 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+<div class="container">
+
+<header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
+</header>
+
+<section>
+  <div>
+    <h1>Soraia Mustafa - Aspiring Web Developer</h1>
+
+    <h3>Currently a student at Lambda</h3>
+
+
+  </div>
+</section>
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
 </body>
 </html>
