--- a/index.html
+++ b/index.html
@@ -26,15 +26,29 @@
       </nav>
 </header>
 
-<section>
-  <div>
-    <h1>Soraia Mustafa - Aspiring Web Developer</h1>
-
-    <h3>Currently a student at Lambda</h3>
-
-
-  </div>
+<section class="middle-content">
+<div class="middle">
+    <img src="laptop-photo.jpg" alt="a picture of a laptop.">
+      <h1>Soraia Mustafa - Web Developer</h1>
+      <h3>Currently a student at Lambda</h3>
+</div>
 </section>
+
+
+<section class="bottom-content">
+<div class="experience">
+  <div class="Introduction">
+    <h2>Hire me because</h2>
+    <p>Reasons to hire me</p>
+  </div>
+  <div class="Skills">
+    <h2>These are my skills</h2>
+    <p>A list of my skills</p>
+  </div>
+</div>
+</section>
+
+
 
 
   
