added css for 500px

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
-        <a href="#">Portfolio</a>
+        <a href="https://soraiagm.github.io/soraiamustafa.github.io/">Portfolio</a>
         <a href="#">Contact</a>
       </nav>
 </header>
@@ -38,15 +38,32 @@
 <section class="bottom-content">
 <div class="experience">
   <div class="Introduction">
-    <h2>Hire me because</h2>
-    <p>Reasons to hire me</p>
+    <h2>Introduction</h2>
+    <p>I'm an conscientious, fast learner, detail-oriented full stack web developer who pays close attention to detail and can assess an organization's needs to build a state of the art website. I'm proficient with a wide array of scripting languages.</p>
   </div>
   <div class="Skills">
-    <h2>These are my skills</h2>
-    <p>A list of my skills</p>
+    <h2>Skills:</h2>
+    <p class="first">HTML</p>
+    <P class="second">CSS</P>
+    <p class="third">Javascript</p>
   </div>
 </div>
 </section>
+
+<section class="work">
+  <div>
+    <h2>Work History</h2> 
+    <p>Small business owner since 2001</p>
+  </div>
+</section>
+
+<footer>
+  <div>
+    <p>Soraia Mustafa</p>
+    <p>Email: soraiamustafa@yahoo.com</p>
+    <p>Phone: 786-780-9155</p>
+  </div>
+</footer>
 
 
 
